# claude-gsuite-admin-mcp

./: .accounts.json.example  .dockerignore  .gauth.json.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  complete_oauth.py  docker-compose.yml  oauth_with_code.py  pyproject.toml  pytest.ini  requirements.txt  run_server.py  setup.py  setup_oauth.py  test_all_reports.py  test_comprehensive.py  test_groups.py  test_mcp_direct.py  test_org_units.py  test_reports_fixed.py  test_simple_audit.py  test_tools.py
.github/workflows/: ci.yml  release.yml
docs/: API.md  EXAMPLES.md  SETUP.md
scripts/: validate_setup.py
src/claude_gsuite_admin/: __init__.py  __main__.py  server.py
src/claude_gsuite_admin/auth/: __init__.py  oauth_manager.py
src/claude_gsuite_admin/core/: __init__.py  exceptions.py  tool_handler.py
src/claude_gsuite_admin/tools/: __init__.py  apps.py  calendar.py  devices.py  domains.py  gmail.py  groups.py  groups_old.py  org_units.py  reports.py  security.py  users.py
src/claude_gsuite_admin/utils/: __init__.py  formatters.py  logging.py  validators.py
tests/: __init__.py  conftest.py  test_auth.py  test_devices.py  test_mcp_tools.py  test_reports.py  test_security.py
tests/integration/: __init__.py
tests/unit/: __init__.py
tests/unit/auth/: __init__.py  test_oauth_manager.py
tests/unit/tools/: __init__.py  test_users.py
